<resources>
    <string name="app_name">HealthApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dietitian__home_">Dietitian_Home_Activity</string>
    <string name="title_activity_dietitian_home">DietitianHome</string>

    <string name="action_add_food">Add Food Options</string>
    <string name="action_preview_food">Preview Food Options</string>
    <string name="action_home">Home</string>
    <string name="title_activity_add_food">AddFood</string>
    <string name="title_activity_preview_food">PreviewFood</string>
    <string name="title_activity_food_details">FoodDetails</string>
    <string name="title_activity_user_home">UserHome</string>

    <string name="breakfast_recommendation">Recommended 600-800 cals</string>
    <string name="lunch_recommendation">Recommended 600-800 cals</string>
    <string name="dinner_recommendation">Recommended 600-800 cals</string>
    <string name="snack_recommendation">Recommended 200-300 cals</string>

    <string name="breakfast_menu_option">breakfast</string>
    <string name="lunch_menu_option">lunch</string>
    <string name="dinner_menu_option">dinner</string>
    <string name="snack_menu_option">snack</string>
    <string name="title_activity_pie">Pie</string>
    <string name="title_activity_pie_chart">PieChart</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="email"><b>Email</b></string>
    <string name="password"><b>Password</b></string>
    <string name="fpassword"><b>Forgot Password</b></string>

    <string name="Calories"><b>Calories: </b></string>
    <string name="Carbohydrates"><b>Carbohydrates: </b></string>
    <string name="Protein"><b>Protein: </b></string>
    <string name="Fat"><b>Fat: </b></string>
    <string name="Fiber"><b>Fiber: </b></string>
    <string name="Sugar"><b>Sugars: </b></string>
    <string name="SatFat"><b>Saturated Fat: </b></string>
    <string name="UnSatFat"><b>Unsaturated Fat: </b></string>
    <string name="Cholestrol"><b>Cholestrol: </b></string>
    <string name="Pottasium"><b>Pottasium: </b></string>
    <string name="Category"><b>Category: </b></string>
    <string name="Name"><b>Name: </b></string>

</resources>
