<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/logOutmenu"
    android:orderInCategory="100"
    app:showAsAction="always"
    android:title="Log Out">

</item>
    <item android:id="@+id/editProfile"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="Edit Profile">

    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_food"
        android:orderInCategory="100"
        android:title="@string/action_add_food"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_preview_food"
        android:orderInCategory="100"
        android:title="@string/action_preview_food"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="never" />
</menu>