<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:design="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.jessicathornsby.bottomviewnavigation.MainActivity">
        <android.support.design.widget.TabLayout
            android:id="@+id/usertabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@color/colorPrimaryDark"
            app:tabTextColor="@color/colorPlain"
            app:tabTextAppearance="@style/tabAppearance">

            <android.support.design.widget.TabItem
                android:text="Home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <android.support.design.widget.TabItem
                android:text="Logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </android.support.design.widget.TabLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/buttonBreakfast"
        android:layout_width="330dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/breakfast2" />


    <Button
        android:id="@+id/buttonLunch"
        android:layout_width="325dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="241dp"
        android:background="@drawable/lunch1" />

    <Button
        android:id="@+id/buttonDinner"
        android:layout_width="319dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/dinner1" />

    <Button
        android:id="@+id/buttonSnack"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="535dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/snack1" />

    <TextView
        android:id="@+id/textbrkfstCalRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="168dp"
        android:layout_marginTop="171dp"
        android:text="@string/breakfast_recommendation"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textlnchCalRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="327dp"
        android:layout_marginEnd="56dp"
        android:text="@string/lunch_recommendation"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textsnackCalRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="22dp"
        android:text="@string/snack_recommendation"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textdinnerCalRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="162dp"
        android:text="@string/dinner_recommendation"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonBreakfastPlan"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="267dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPlain"
        android:textSize="16sp"
        android:text="Your Plan"
        android:textAlignment="center"

        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonLunchPlan"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="323dp"
        android:text="Your PLAN"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPlain"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonDinnerplan"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="154dp"
        android:text="Your PLAN"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPlain"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSnackPlan"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="11dp"
        android:text="Your PLAN"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPlain"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>